[레거시 코드 리팩터링 - 2단계] 파워(송재백) 미션 제출합니다. (#596)
* chore: flyway 설정 추가

* feat: TableGroup 리팩터링

* feat: Product 리팩터링

* feat: OrderLineItem 리팩터링

* feat: OrderTable 리팩터링

* feat: Order 리팩터링

* feat: MenuProduct 리팩터링

* feat: MenuGroup 리팩터링

* feat: Menu 리팩터링

* feat: Price VO 구현

* refctor: MenuService 메서드 분리

* refctor: OrderService 메서드 분리

* refctor: TableService 메서드 분리

* refctor: TableGroupService 메서드 분리

* refctor: Product JPA Entity로 변경

* refctor: MenuGroup JPA Entity로 변경

* refctor: Menu, MenuProduct JPA Entity로 변경

* refctor: TableGroup JPA Entity로 변경

* refactor: Product Request 생성

* refactor: MenuGroup Response 구현

* refactor: Product Response 구현

* refactor: Order JPA Entity로 변경

* refactor: 컨트롤러가 모두 Dto를 반환하도록 리펙터링

* refactor: flyway sql 명세에 맞게 entity 수정

* refactor: OrderTable Request Dto 구현

* refactor: 사용하지 않는 import 제거

* refactor: tableGroup 예외 처리 이동

* refactor: repository default method 활용

* refactor: 코드 컨벤션 통일

* refactor: fk 네이밍 명시

* refactor: 파라메터가 하나인 request 기본 생성자 추가

* refactor: BaseEntity 구현

* test: 도메인 테스트코드 추가