@@ -1,148 +1,149 @@
 package kitchenpos.application;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import kitchenpos.dao.OrderDao;
-import kitchenpos.dao.OrderTableDao;
-import kitchenpos.dao.TableGroupDao;
-import kitchenpos.domain.OrderStatus;
+import kitchenpos.application.dto.OrderCreateRequest;
+import kitchenpos.application.dto.OrderCreateRequest.OrderLineRequest;
+import kitchenpos.application.dto.TableGroupCreateRequest;
+import kitchenpos.application.dto.TableGroupCreateRequest.OrderTableRequest;
+import kitchenpos.application.dto.TableGroupResponse;
+import kitchenpos.dao.MenuRepository;
+import kitchenpos.dao.OrderLineItemRepository;
+import kitchenpos.dao.OrderRepository;
+import kitchenpos.dao.OrderTableRepository;
+import kitchenpos.dao.TableGroupRepository;
 import kitchenpos.domain.OrderTable;
 import kitchenpos.domain.TableGroup;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.transaction.annotation.Transactional;
 
-@ExtendWith(MockitoExtension.class)
-class TableGroupServiceTest {
+@SpringBootTest
+@Transactional
+public class TableGroupServiceTest {
 
-    @Mock
-    private OrderDao orderDao;
-    @Mock
-    private OrderTableDao orderTableDao;
-    @Mock
-    private TableGroupDao tableGroupDao;
-    @InjectMocks
     private TableGroupService tableGroupService;
+    private OrderService orderService;
+    @Autowired
+    private OrderRepository orderRepository;
+    @Autowired
+    private OrderTableRepository orderTableRepository;
+    @Autowired
+    private TableGroupRepository tableGroupRepository;
+    @Autowired
+    private MenuRepository menuRepository;
+    @Autowired
+    private OrderLineItemRepository orderLineItemRepository;
+
+    @BeforeEach
+    void setUp() {
+        orderService = new OrderService(
+                menuRepository, orderRepository, orderLineItemRepository, orderTableRepository
+        );
+        tableGroupService = new TableGroupService(orderTableRepository, tableGroupRepository);
+    }
 
     @Test
     void 주문_테이블_리스트는_빈값일_수_없습니다() {
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(Collections.EMPTY_LIST);
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup)).isInstanceOf(IllegalArgumentException.class);
+        TableGroupCreateRequest request = new TableGroupCreateRequest(null);
+        assertThatThrownBy(() -> tableGroupService.create(request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("주문 테이블이 비어 있거나 2개 미만일 수 없습니다.");
     }
 
     @Test
     void 주문_테이블_리스트_개수는_1개_이하일_수_없습니다() {
-        TableGroup tableGroup = new TableGroup();
-        tableGroup.setOrderTables(List.of(new OrderTable()));
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup)).isInstanceOf(IllegalArgumentException.class);
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(new OrderTableRequest(1L)));
+        assertThatThrownBy(() -> tableGroupService.create(request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("주문 테이블이 비어 있거나 2개 미만일 수 없습니다.");
     }
 
     @Test
-    void 주문_테이블_개수와_실제_저장된_테이블의_개수가_다르면_예외를_반환한다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable orderTable1 = new OrderTable();
-        orderTable1.setId(1L);
-        OrderTable orderTable2 = new OrderTable();
-        orderTable2.setId(2L);
-        tableGroup.setOrderTables(List.of(orderTable1, orderTable2));
+    void 주문_테이블이_존재하지_않는_경우_예외를_반환한다() {
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(
+                new OrderTableRequest(0L),
+                new OrderTableRequest(1L)
+        ));
 
-        when(orderTableDao.findAllByIdIn(List.of(1L, 2L))).thenReturn(Collections.EMPTY_LIST);
-
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup)).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("주문 테이블이 존재하지 않습니다.");
     }
 
     @Test
-    void 저장된_주문_테이블은_empty일_수_없다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable orderTable1 = new OrderTable();
-        orderTable1.setId(1L);
-        orderTable1.setEmpty(false);
-        OrderTable orderTable2 = new OrderTable();
-        orderTable2.setId(2L);
-        orderTable2.setEmpty(false);
-        tableGroup.setOrderTables(List.of(orderTable1, orderTable2));
+    void 저장된_주문_테이블은_테이블_그룹이_존재할_수_없다() {
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(
+                new OrderTableRequest(9L),
+                new OrderTableRequest(10L)
+        ));
 
-        when(orderTableDao.findAllByIdIn(List.of(1L, 2L))).thenReturn(List.of(orderTable1, orderTable2));
-
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup)).isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    void 저장된_주문_테이블은_테이블_그룹이_존재해야한다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable orderTable1 = new OrderTable();
-        orderTable1.setId(1L);
-        orderTable1.setEmpty(true);
-        orderTable1.setTableGroupId(3L);
-        OrderTable orderTable2 = new OrderTable();
-        orderTable2.setId(2L);
-        orderTable2.setEmpty(true);
-        tableGroup.setOrderTables(List.of(orderTable1, orderTable2));
-
-        when(orderTableDao.findAllByIdIn(List.of(1L, 2L))).thenReturn(List.of(orderTable1, orderTable2));
-
-        assertThatThrownBy(() -> tableGroupService.create(tableGroup)).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.create(request))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("테이블 그룹이 존재하는 경우 테이블 상태를 수정할 수 없습니다.");
     }
 
     @Test
     void 단체_테이블_생성할_수_있다() {
-        TableGroup tableGroup = new TableGroup();
-        OrderTable orderTable1 = new OrderTable();
-        orderTable1.setId(1L);
-        orderTable1.setEmpty(true);
-        OrderTable orderTable2 = new OrderTable();
-        orderTable2.setId(2L);
-        orderTable2.setEmpty(true);
-        tableGroup.setOrderTables(List.of(orderTable1, orderTable2));
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(
+                new OrderTableRequest(1L),
+                new OrderTableRequest(2L)
+        ));
 
-        when(orderTableDao.findAllByIdIn(List.of(1L, 2L))).thenReturn(List.of(orderTable1, orderTable2));
-        when(tableGroupDao.save(tableGroup)).thenReturn(tableGroup);
+        tableGroupService.create(request);
 
-        tableGroupService.create(tableGroup);
+        OrderTable orderTable1 = orderTableRepository.findById(1L).orElseThrow();
+        OrderTable orderTable2 = orderTableRepository.findById(2L).orElseThrow();
 
-        verify(tableGroupDao).save(tableGroup);
-        verify(orderTableDao, times(2)).save(any(OrderTable.class));
+        assertSoftly(softly -> {
+            softly.assertThat(orderTable1.isEmpty()).isFalse();
+            softly.assertThat(orderTable1.getTableGroup()).isNotNull();
+            softly.assertThat(orderTable2.isEmpty()).isFalse();
+            softly.assertThat(orderTable2.getTableGroup()).isNotNull();
+        });
     }
 
     @Test
     void COOKING_MEAL_상태일때는_삭제할_수_없다() {
-        OrderTable orderTable = new OrderTable();
-        orderTable.setId(2L);
-        long tableGroupId = 1L;
-        when(orderTableDao.findAllByTableGroupId(tableGroupId)).thenReturn(List.of(orderTable));
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(
+                new OrderTableRequest(1L),
+                new OrderTableRequest(2L)
+        ));
 
-        when(orderDao.existsByOrderTableIdInAndOrderStatusIn(
-                List.of(2L),
-                Arrays.asList(OrderStatus.COOKING.name(), OrderStatus.MEAL.name())
-        )).thenReturn(true);
+        TableGroupResponse tableGroup = tableGroupService.create(request);
+        orderService.create(new OrderCreateRequest(
+                tableGroup.getId(),
+                List.of(new OrderLineRequest(1L, 1))
+        ));
 
-        assertThatThrownBy(() -> tableGroupService.ungroup(tableGroupId)).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> tableGroupService.ungroup(tableGroup.getId()))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("주문 완료 상태일때만 테이블 수정 가능합니다.");
     }
 
     @Test
     void 단체_테이블_삭제할_수_있다() {
-        OrderTable orderTable = new OrderTable();
-        orderTable.setId(2L);
-        long tableGroupId = 1L;
-        when(orderTableDao.findAllByTableGroupId(tableGroupId)).thenReturn(List.of(orderTable));
+        TableGroupCreateRequest request = new TableGroupCreateRequest(List.of(
+                new OrderTableRequest(1L),
+                new OrderTableRequest(2L)
+        ));
 
-        when(orderDao.existsByOrderTableIdInAndOrderStatusIn(
-                List.of(2L),
-                Arrays.asList(OrderStatus.COOKING.name(), OrderStatus.MEAL.name())
-        )).thenReturn(false);
+        TableGroupResponse tableGroup = tableGroupService.create(request);
 
-        tableGroupService.ungroup(tableGroupId);
+        tableGroupService.ungroup(tableGroup.getId());
 
-        verify(orderTableDao).save(orderTable);
+        OrderTable orderTable1 = orderTableRepository.findById(1L).orElseThrow();
+        OrderTable orderTable2 = orderTableRepository.findById(2L).orElseThrow();
+
+        assertSoftly(softly -> {
+            softly.assertThat(orderTable1.isEmpty()).isFalse();
+            softly.assertThat(orderTable1.getTableGroup()).isNull();
+            softly.assertThat(orderTable2.isEmpty()).isFalse();
+            softly.assertThat(orderTable2.getTableGroup()).isNull();
+        });
     }
 }
